CGIV-7391 Increased the z-index of the fixed header bar

--- a/public/channelgrabber/orders/scss/_orders.scss
+++ b/public/channelgrabber/orders/scss/_orders.scss
@@ -20,7 +20,7 @@
     max-height: 140px;
     width: calc(100% - 261px);
     position: fixed;
-    z-index: 10;
+    z-index: 200;
     border-bottom: 1px solid $color-lgrey;
     border-left: 1px solid $color-lgrey;
     background: $color-grey;
